feat: implement badge creation and update index content

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<div class="socials">
+<footer class="socials">
   <div class="socials-links">
     <a
       class="link"
@@ -49,11 +49,11 @@
     </a>
   </div>
   <div class="email">pastorronceroana@gmail.com</div>
-</div>
+</footer>
 
 <style>
   .socials {
-    width: 100%; 
+    width: 57.5rem; 
     height: 4.375rem;
     display: flex;
     flex-direction: column;
@@ -65,7 +65,7 @@
       display: flex;
       justify-content: flex-start;
       align-items: center;
-      gap: 16px;
+      gap: 1rem;
       
       
 
@@ -101,7 +101,6 @@
       }
     }
     & .email {
-      width: 100%;
       font-family: var(--font-regular);
       height: 1.25rem;
       display: flex;
