--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ const author = "Ana Pastor Roncero";
 import ROUTES from "@/assets/routes.json";
 ---
 
-<div class="NavBar">
+<header class="NavBar">
   <h1 class="name"><a class="name-link" href="/">{author}</a></h1>
 
   <nav class="wrapper">
@@ -28,17 +28,17 @@ import ROUTES from "@/assets/routes.json";
       <path d="m19.07 4.93-1.41 1.41"></path>
     </svg>
   </nav>
-</div>
+</header>
 
 <style>
   .NavBar {
-    width: 100%;
+    width: 57.5rem;
     display: flex;
     flex-direction: row;
     height: 6.25rem;
-    background-color: rgb(0, 0, 0);
     align-items: center;
     justify-content: space-between;
+    
 
     & .name {
       & .name-link{
