feat: Add footer to BaseLayout

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,11 +32,11 @@ const description = "Página de experiencia";
 
 <style>
   .personal-info {
-    width: 920px;
+    font-family: var(--font-regular);
+    width: 100%;
 
     & .info{
         padding: 16px 0;
-        background-color: rgb(197, 0, 0);
 
         & p:not(:last-child){
             margin-bottom: 28px;
