feat: color text index

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,6 +33,7 @@ const description = "Página de experiencia";
 <style>
   .personal-info {
     font-family: var(--font-regular);
+    color: var(--font-color-lightest);
     width: 100%;
 
     & .info{
