feat: Organize content structure in BaseLayout and add background for a dark theme

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@
   <div class="socials-links">
     <a
       class="link"
-      href="https://github.com/search?q=miriadax%20html%20css%20y%20javascript&type=repositories"
+      href="https://github.com/Anaroncero"
     >
       <span class="text">GitHub</span>
       <svg
@@ -27,7 +27,7 @@
 
     <a
       class="link"
-      href="https://www.google.com/search?q=linkedin&oq=link&gs_lcrp=EgZjaHJvbWUqBwgBEAAYgAQyBggAEEUYPDIHCAEQABiABDIGCAIQRRg5MgcIAxAAGIAEMgYIBBBFGDwyBggFEEUYPDIGCAYQRRg8MgYIBxBFGEHSAQgyMzMxajBqN6gCALACAA&sourceid=chrome&ie=UTF-8"
+      href="https://www.linkedin.com/in/ana-pastor-roncero-600a57266/?originalSubdomain=es"
     >
       <span class="text">Linkedln</span>
       <svg
