--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Estado from "@/components/estado.astro";
+import Estado from "@/components/Estado.astro";
 import BaseLayout from "@/layouts/BaseLayout.astro";
 
 const title = "Ana Pastor";
@@ -11,7 +11,7 @@ const description = "Página de experiencia";
     <section class="personal-info">
       <div class="title">
         <h1>Ana Pastor</h1>
-        <Estado>Disponible para trabajar</Estado>
+        <a href="https://www.linkedin.com/in/ana-pastor-roncero-600a57266/?originalSubdomain=es"><Estado>Disponible para trabajar</Estado></a>
       </div>
       <div class="info">
       <p>
