--- a/src/components/estado.astro
+++ b/src/components/estado.astro
@@ -11,5 +11,10 @@
     padding: 2px 10px;
     border-radius: 6px;
     display: inline-block;
+    transform: var(--transition-config);
+
+    &:hover{
+      box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    }
   }
 </style>
