feat:  update badge styles

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -35,10 +35,10 @@ const { title, description } = Astro.props;
     margin: 0;
     box-sizing: border-box;
   }
-
+ 
   html {
-    --font-bold: "Satoshi-Bold", system-ui, sans-serif;
-    --font-regular: "Satoshi-Regular", system-ui, sans-serif;
+    --font-bold: "Satoshi-Bold", system-ui, sans-serif, -apple-system, Arial ;
+    --font-regular: "Satoshi-Regular", system-ui, sans-serif, -apple-system, Arial;
 
     --font-color-lightest: #ffffff;
     --font-color-light: #b1b1b1;
