--- a/src/pages/experiencia/index.astro
+++ b/src/pages/experiencia/index.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from "@/layouts/BaseLayout.astro";
 const title = "Experiencia";
-const description = "Página de experiencia"
+const description = "Página de experiencia, Experiencia como técnico de sistemas microinformáticos y redes"
 ---
 
 <BaseLayout title={title} description={description}>
