--- a/src/components/Status.astro
+++ b/src/components/Status.astro
@@ -11,15 +11,14 @@
     color: #d1fae5;
     background-color: #065f46;
     font-size: 0.85rem; /* 12px */
-    font-weight: 500;
     padding: 2px 10px;
     border-radius: 6px;
     transform: var(--transition-config);
+    gap: 8px;
 
     & .indicator {
-      width: 0.5rem; 
+      width: 0.5rem; /* 8px */
       height: 0.5rem; 
-      margin-right: 0.50rem; 
       background-color: #22c55e; 
       border-radius: 9999px; 
     }
