--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,10 +3,7 @@
 ---
 <footer class="socials">
   <div class="socials-links">
-    <a
-      class="link"
-      href="https://github.com/Anaroncero"
-    >
+    <a class="link" href="https://github.com/Anaroncero">
       <span class="text">GitHub</span>
       <svg
         class="arrow"
@@ -25,10 +22,7 @@
       </svg>
     </a>
 
-    <a
-      class="link"
-      href="https://www.linkedin.com/in/ana-pastor-roncero-600a57266/?originalSubdomain=es"
-    >
+    <a class="link" href="https://www.linkedin.com/in/ana-pastor-roncero-600a57266/?originalSubdomain=es">
       <span class="text">Linkedln</span>
       <svg
         class="arrow"
