--- a/src/pages/experiencia/index.astro
+++ b/src/pages/experiencia/index.astro
@@ -1,9 +1,12 @@
 ---
 import BaseLayout from "@/layouts/BaseLayout.astro";
+import Section from "@/components/Section.astro";
 const title = "Experiencia";
-const description = "Página de experiencia, Experiencia como técnico de sistemas microinformáticos y redes"
+const description =
+  "Página de experiencia, Experiencia como técnico de sistemas microinformáticos y redes";
+const titleContent = "Experiencia";
 ---
 
 <BaseLayout title={title} description={description}>
-<h1>Experiencia</h1>
+  <Section titleContent={titleContent} />
 </BaseLayout>
