--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,8 +4,7 @@ import Status from "@/components/Status.astro";
 import Section from "@/components/Section.astro";
 
 const title = "Ana Pastor";
-const description =
-  "Portfolio de Ana, esudiante de DAM desarrollador Web, desarrollador Backend";
+const description ="Portfolio de Ana, esudiante de DAM desarrollador Web, desarrollador Backend";
 const titleContent = "Ana Pastor Roncero";
 ---
 
