--- a/src/pages/proyectos/index.astro
+++ b/src/pages/proyectos/index.astro
@@ -1,9 +1,11 @@
 ---
 import BaseLayout from "@/layouts/BaseLayout.astro";
+import Section from "@/components/Section.astro";
 const title = "Proyectos";
 const description = "Página de proyectos"
+const titleContent = "Proyectos";
 ---
 
 <BaseLayout title={title} description={description}>
-<h1>Proyectos</h1>
+<Section titleContent={titleContent}></Section>
 </BaseLayout>
