feat: update status

--- a/src/components/Status.astro
+++ b/src/components/Status.astro
@@ -7,16 +7,19 @@
 
 <style>
   .container {
+    font-size: 12px;
     font-family: var(--font-regular);
+    height: 24px;
+    width: 170px;
+    padding: 2px 10px;
+    border-radius: 6px;
     display: inline-flex;
+    gap: 8px;
     align-items: center;
     color: #d1fae5;
     background-color: #065f46;
-    font-size: 0.85rem; /* 12px */
-    padding: 2px 10px;
-    border-radius: 6px;
     transform: var(--transition-config);
-    gap: 8px;
+   
 
     & .indicator {
       width: 0.5rem; /* 8px */
