--- a/src/pages/formacion/index.astro
+++ b/src/pages/formacion/index.astro
@@ -1,11 +1,16 @@
 ---
 import BaseLayout from "@/layouts/BaseLayout.astro";
 import Section from "@/components/Section.astro";
+import Status from "@/components/Status.astro";
 const title = "Formación";
 const description = "Página de formación";
 const titleContent = "Formación"
 ---
 
 <BaseLayout title={title} description={description}>
-  <Section titleContent={titleContent} />
+  <Section titleContent={titleContent}>
+    
+  </Section>
+  <Status>vivir la vida</Status>
 </BaseLayout>
+
