feat: timeline formacion

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,6 +8,7 @@ import ROUTES from "@/assets/routes.json";
 
   <nav class="wrapper">
     {ROUTES.map((route) => <a class="links" href={route.url}>{route.text}</a>)}
+    <!-- Icono oscuro -->
     <svg
       class:list="icon-sun"
       xmlns="http://www.w3.org/2000/svg"
