--- a/src/pages/experiencia/index.astro
+++ b/src/pages/experiencia/index.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from "@/layouts/BaseLayout.astro";
-import Section from "@/components/Section.astro";
+import TitlePage from "@/components/TitlePage.astro";
+import TimeLine from "@/components/FormacionTimeLine.astro";
 const title = "Experiencia";
 const description =
   "Página de experiencia, Experiencia como técnico de sistemas microinformáticos y redes";
@@ -8,5 +9,5 @@ const titleContent = "Experiencia";
 ---
 
 <BaseLayout title={title} description={description}>
-  <Section titleContent={titleContent} />
+  <TitlePage titleContent={titleContent} />
 </BaseLayout>
