--- a/src/pages/formacion/index.astro
+++ b/src/pages/formacion/index.astro
@@ -1,16 +1,15 @@
 ---
 import BaseLayout from "@/layouts/BaseLayout.astro";
-import Section from "@/components/Section.astro";
-import Status from "@/components/Status.astro";
+import FormacionTimeLine from "@/components/FormacionTimeLine.astro";
+import TitlePage from "@/components/TitlePage.astro";
 const title = "Formación";
 const description = "Página de formación";
 const titleContent = "Formación"
 ---
 
 <BaseLayout title={title} description={description}>
-  <Section titleContent={titleContent}>
-    
-  </Section>
-  <Status>vivir la vida</Status>
+  <TitlePage titleContent={titleContent}>
+  </TitlePage>
+  <FormacionTimeLine>
 </BaseLayout>
 
