--- a/src/pages/proyectos/index.astro
+++ b/src/pages/proyectos/index.astro
@@ -1,11 +1,11 @@
 ---
 import BaseLayout from "@/layouts/BaseLayout.astro";
-import Section from "@/components/Section.astro";
+import TitlePage from "@/components/TitlePage.astro";
 const title = "Proyectos";
-const description = "Página de proyectos"
+const description = "Página de proyectos";
 const titleContent = "Proyectos";
 ---
 
 <BaseLayout title={title} description={description}>
-<Section titleContent={titleContent}></Section>
+  <TitlePage titleContent={titleContent} />
 </BaseLayout>
