--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -39,27 +39,14 @@ const { title, description } = Astro.props;
   html {
     --font-bold: "Satoshi-Bold", system-ui, sans-serif, -apple-system, Arial ;
     --font-regular: "Satoshi-Regular", system-ui, sans-serif, -apple-system, Arial;
-
+    --font-light: "Satoshi-Light", system-ui, sans-serif, -apple-system, Arial;;
     --font-color-lightest: #ffffff;
     --font-color-light: #b1b1b1;
 
+    --font-color-important: #d2b9fd;
+
     --transition-config: all 0.15s ease;
-    /* 
-    background-color: #050505;
-    background-color: hsla(210, 0%, 2%, 1);
-    background-image: radial-gradient(
-        at 15% 85%,
-        hsla(200, 15%, 5%, 1) 0px,
-        transparent 50%
-      ),
-      radial-gradient(at 30% 20%, hsla(140, 10%, 4%, 1) 0px, transparent 50%),
-      radial-gradient(at 65% 70%, hsla(0, 0%, 3%, 1) 0px, transparent 50%),
-      radial-gradient(at 50% 10%, hsla(210, 5%, 2%, 1) 0px, transparent 50%),
-      radial-gradient(at 80% 5%, hsla(180, 5%, 6%, 1) 0px, transparent 50%),
-      radial-gradient(at 5% 60%, hsla(200, 20%, 4%, 1) 0px, transparent 50%),
-      radial-gradient(at 75% 40%, hsla(160, 0%, 3%, 1) 0px, transparent 50%),
-      radial-gradient(at 90% 95%, hsla(180, 0%, 0%, 1) 0px, transparent 50%);
-     */
+  
   }
 
   body {
