--- a/src/pages/experiencia/index.astro
+++ b/src/pages/experiencia/index.astro
@@ -2,6 +2,7 @@
 import BaseLayout from "@/layouts/BaseLayout.astro";
 import TitlePage from "@/components/TitlePage.astro";
 import TimeLine from "@/components/FormacionTimeLine.astro";
+import ExperienciaTimeLine from "@/components/ExperienciaTimeLine.astro";
 const title = "Experiencia";
 const description =
   "Página de experiencia, Experiencia como técnico de sistemas microinformáticos y redes";
@@ -10,4 +11,5 @@ const titleContent = "Experiencia";
 
 <BaseLayout title={title} description={description}>
   <TitlePage titleContent={titleContent} />
+  <ExperienciaTimeLine>
 </BaseLayout>
