--- a/src/components/ExperienciaTimeLine.astro
+++ b/src/components/ExperienciaTimeLine.astro
@@ -6,7 +6,7 @@ import Status from "./Status.astro";
   <ul class="timeline">
     <li class="timeline-item-list">
       <div class="box-logo">
-        <img class="logo" src="/public/images/ja_logo.jpeg" alt="logo" />
+        <img class="logo" src="/images/ja_logo.jpeg" alt="logo" />
       </div>
       <h3>Técnico informático</h3>
       <span>Junta de Andalucía</span>
