--- a/src/components/FormacionTimeLine.astro
+++ b/src/components/FormacionTimeLine.astro
@@ -6,7 +6,7 @@
   <ul class="timeline">
     <li class="timeline-item-list">
       <div class="box-logo">
-        <img class="logo" src="/public/images/medac_logo.jpeg" alt="logo" />
+        <img class="logo" src="/images/medac_logo.jpeg" alt="logo" />
       </div>
 
       <h3>MEDAC</h3>
@@ -18,7 +18,7 @@
       <div class="box-logo">
         <img
           class="logo"
-          src="/public/images/reyesdeespana_logo.png"
+          src="/images/reyesdeespana_logo.png"
           alt="logo"
         />
       </div>
@@ -32,7 +32,7 @@
       <div class="box-logo">
         <img
           class="logo"
-          src="/public/images/padresuarez_logo.jpg"
+          src="/images/padresuarez_logo.jpg"
           alt="logo"
         />
       </div>
