Actualizar index.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,13 +12,12 @@ const description ="Portfolio de Ana, estudiante de DAM desarrollador Web, desar
     </TitleStatus>
     <div class="info">
       <p>
-        Hola, soy Ana, <span class="info-bold">técnico de Sistemas Microinformáticos y redes.</span>
-        De Jaén, España.
+        Hola, soy Ana, <span class="info-bold"> .</span>
       </p>
       <p>
-        Actualmente, estoy estudiando el Grado Superior de DAM (Desarrollo de Aplicaciones Multiplataforma).
+        .
       </p>
-      <p>Puedes encontrarme</p>
+      <p>.</p>
     </div>
   </main>
 
